remove double resto